rust/tests/snapshots/test_from_file__diet.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: diet
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: Roasted_Chicken
        value: 0.84
      - name: Spaghetti_W__Sauce
        value: 0.78
      - name: "Tomato,Red,Ripe,Raw"
        value: 0.27
      - name: "Apple,Raw,W_Skin"
        value: 0.24
      - name: Grapes
        value: 0.32
      - name: Chocolate_Chip_Cookies
        value: 0.03
      - name: Lowfat_Milk
        value: 0.23
      - name: Raisin_Brn
        value: 0.34
      - name: Hotdog
        value: 0.31
    constant: 0
constraints:
  - type: Standard
    name: c1
    coefficients:
      - name: Roasted_Chicken
        value: 277.4
      - name: Spaghetti_W__Sauce
        value: 358.2
      - name: "Tomato,Red,Ripe,Raw"
        value: 25.8
      - name: "Apple,Raw,W_Skin"
        value: 81.4
      - name: Grapes
        value: 15.1
      - name: Chocolate_Chip_Cookies
        value: 78.1
      - name: Lowfat_Milk
        value: 121.2
      - name: Raisin_Brn
        value: 115.1
      - name: Hotdog
        value: 242.1
      - name: Rgc1
        value: -1
    operator: EQ
    rhs: 2500
  - type: Standard
    name: c2
    coefficients:
      - name: Roasted_Chicken
        value: 21.9
      - name: Spaghetti_W__Sauce
        value: 80.2
      - name: "Tomato,Red,Ripe,Raw"
        value: 6.2
      - name: "Apple,Raw,W_Skin"
        value: 9.7
      - name: Grapes
        value: 3.4
      - name: Chocolate_Chip_Cookies
        value: 6.2
      - name: Lowfat_Milk
        value: 296.7
      - name: Raisin_Brn
        value: 12.9
      - name: Hotdog
        value: 23.5
      - name: Rgc2
        value: -1
    operator: EQ
    rhs: 1600
  - type: Standard
    name: c3
    coefficients:
      - name: Roasted_Chicken
        value: 1.8
      - name: Spaghetti_W__Sauce
        value: 2.3
      - name: "Tomato,Red,Ripe,Raw"
        value: 0.6
      - name: "Apple,Raw,W_Skin"
        value: 0.2
      - name: Grapes
        value: 0.1
      - name: Chocolate_Chip_Cookies
        value: 0.4
      - name: Lowfat_Milk
        value: 0.1
      - name: Raisin_Brn
        value: 16.8
      - name: Hotdog
        value: 2.3
      - name: Rgc3
        value: -1
    operator: EQ
    rhs: 30
  - type: Standard
    name: c4
    coefficients:
      - name: Roasted_Chicken
        value: 77.4
      - name: Spaghetti_W__Sauce
        value: 3055.2
      - name: "Tomato,Red,Ripe,Raw"
        value: 766.3
      - name: "Apple,Raw,W_Skin"
        value: 73.1
      - name: Grapes
        value: 24
      - name: Chocolate_Chip_Cookies
        value: 101.8
      - name: Lowfat_Milk
        value: 500.2
      - name: Raisin_Brn
        value: 1250.2
      - name: Rgc4
        value: -1
    operator: EQ
    rhs: 50000
  - type: Standard
    name: c5
    coefficients:
      - name: Spaghetti_W__Sauce
        value: 11.6
      - name: "Tomato,Red,Ripe,Raw"
        value: 1.4
      - name: "Apple,Raw,W_Skin"
        value: 3.7
      - name: Grapes
        value: 0.2
      - name: Raisin_Brn
        value: 4
      - name: Rgc5
        value: -1
    operator: EQ
    rhs: 100
  - type: Standard
    name: c6
    coefficients:
      - name: Spaghetti_W__Sauce
        value: 58.3
      - name: "Tomato,Red,Ripe,Raw"
        value: 5.7
      - name: "Apple,Raw,W_Skin"
        value: 21
      - name: Grapes
        value: 4.1
      - name: Chocolate_Chip_Cookies
        value: 9.3
      - name: Lowfat_Milk
        value: 11.7
      - name: Raisin_Brn
        value: 27.9
      - name: Hotdog
        value: 18
      - name: Rgc6
        value: -1
    operator: EQ
    rhs: 300
  - type: Standard
    name: c7
    coefficients:
      - name: Roasted_Chicken
        value: 42.2
      - name: Spaghetti_W__Sauce
        value: 8.2
      - name: "Tomato,Red,Ripe,Raw"
        value: 1
      - name: "Apple,Raw,W_Skin"
        value: 0.3
      - name: Grapes
        value: 0.2
      - name: Chocolate_Chip_Cookies
        value: 0.9
      - name: Lowfat_Milk
        value: 8.1
      - name: Raisin_Brn
        value: 4
      - name: Hotdog
        value: 10.4
      - name: Rgc7
        value: -1
    operator: EQ
    rhs: 100
variables:
  - name: "Apple,Raw,W_Skin"
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
  - name: Chocolate_Chip_Cookies
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
  - name: Grapes
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
  - name: Hotdog
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
  - name: Lowfat_Milk
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
  - name: Raisin_Brn
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
  - name: Rgc1
    kind: Continuous
    bounds:
      lower: -500
      upper: 0
  - name: Rgc2
    kind: Continuous
    bounds:
      lower: -800
      upper: 0
  - name: Rgc3
    kind: Continuous
    bounds:
      lower: -20
      upper: 0
  - name: Rgc4
    kind: Continuous
    bounds:
      lower: -45000
      upper: 0
  - name: Rgc5
    kind: Continuous
    bounds:
      lower: -75
      upper: 0
  - name: Rgc6
    kind: Continuous
    bounds:
      lower: -300
      upper: 0
  - name: Rgc7
    kind: Continuous
    bounds:
      lower: -50
      upper: 0
  - name: Roasted_Chicken
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
  - name: Spaghetti_W__Sauce
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
  - name: "Tomato,Red,Ripe,Raw"
    kind: Continuous
    bounds:
      lower: ~
      upper: 10
