rust/tests/snapshots/test_from_file__empty_bounds.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: x
        value: 1
      - name: y
        value: 10
    constant: 0
constraints:
  - type: Standard
    name: r01
    coefficients:
      - name: x
        value: 1
      - name: y
        value: 1
    operator: GTE
    rhs: 1
variables:
  - name: x
    var_type: Binary
  - name: y
    var_type: Binary
