rust/tests/snapshots/test_from_file__infile_comments.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: x1
        value: 3
      - name: x2
        value: 5
      - name: x3
        value: 6
      - name: x4
        value: 9
      - name: x5
        value: 10
      - name: x6
        value: 10
    constant: 0
constraints:
  - type: Standard
    name: c003
    coefficients:
      - name: x1
        value: 5
      - name: x2
        value: -1
      - name: x3
        value: 4
      - name: x4
        value: -2
      - name: x5
        value: 2
      - name: x6
        value: -1
    operator: GTE
    rhs: 3
variables:
  - name: x1
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: x2
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: x3
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: x4
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: x5
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: x6
    kind: Binary
    bounds:
      lower: ~
      upper: ~
  - name: x7
    kind: Binary
    bounds:
      lower: ~
      upper: ~
