rust/tests/snapshots/test_from_file__infile_comments2.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: x1
        value: 3
      - name: x2
        value: 5
      - name: x3
        value: 6
      - name: x4
        value: 9
      - name: x5
        value: 10
      - name: x6
        value: 10
    constant: 0
constraints: []
variables:
  - name: x1
    var_type: Binary
  - name: x2
    var_type: Binary
  - name: x3
    var_type: Binary
  - name: x4
    var_type: Binary
  - name: x5
    var_type: Binary
  - name: x6
    var_type: Binary
  - name: x7
    var_type: Binary
