rust/tests/snapshots/test_from_file__lol.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Maximize
objectives:
  - name: obj
    coefficients:
      - name: x1
        value: 3
      - name: x2
        value: 1
      - name: x3
        value: 5
      - name: x4
        value: 1
    constant: 0
constraints:
  - type: Standard
    name: c1
    coefficients:
      - name: x1
        value: 3
      - name: x2
        value: 1
      - name: x3
        value: 2
    operator: EQ
    rhs: 30
  - type: Standard
    name: c2
    coefficients:
      - name: x1
        value: 2
      - name: x2
        value: 1
      - name: x3
        value: 3
      - name: x4
        value: 1
    operator: GTE
    rhs: 15
  - type: Standard
    name: c3
    coefficients:
      - name: x2
        value: 2
      - name: x4
        value: 3
    operator: LTE
    rhs: 25
variables:
  - name: x1
    var_type:
      DoubleBound:
        - 0
        - inf
  - name: x2
    var_type:
      DoubleBound:
        - 0
        - 10
  - name: x3
    var_type:
      DoubleBound:
        - 0
        - inf
  - name: x4
    var_type:
      DoubleBound:
        - 0
        - inf
