rust/tests/snapshots/test_from_file__milo1.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Maximize
objectives:
  - name: obj
    coefficients:
      - name: x1
        value: 1
      - name: x2
        value: 0.64
    constant: 0
constraints:
  - type: Standard
    name: c1
    coefficients:
      - name: x1
        value: 50
      - name: x2
        value: 31
    operator: LTE
    rhs: 250
  - type: Standard
    name: c2
    coefficients:
      - name: x1
        value: 3
      - name: x2
        value: -2
    operator: GTE
    rhs: -4
variables:
  - name: x1
    var_type:
      DoubleBound:
        - 0
        - inf
  - name: x2
    var_type:
      DoubleBound:
        - 0
        - inf
