rust/tests/snapshots/test_from_file__model.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
name: ilog.cplex
sense: Minimize
objectives:
  - name: obj
    coefficients:
      - name: x
        value: -1
      - name: y
        value: -1
    constant: 0
constraints:
  - type: Standard
    name: blah
    coefficients:
      - name: x
        value: 1
      - name: y
        value: -1
    operator: EQ
    rhs: 0
variables:
  - name: x
    kind: General
    bounds:
      lower: 0
      upper: 1
  - name: y
    kind: SemiContinuous
    bounds:
      lower: 0.2
      upper: 1
