rust/tests/snapshots/test_from_file__mosek.snap
---
source: rust/tests/test_from_file.rs
expression: parsed
---
sense: Minimize
objectives:
  - name: system_cost
    coefficients:
      - name: Gen_001d01h01
        value: 0.2
      - name: Gen_001d01h02
        value: 0.2
      - name: Gen_001d01h03
        value: 0.2
      - name: Gen_001d01h04
        value: 0.2
      - name: Gen_001d01h05
        value: 0.2
      - name: Gen_001d01h06
        value: 0.2
      - name: Gen_001d01h07
        value: 0.2
      - name: Gen_001d01h08
        value: 0.2
      - name: Gen_001d01h09
        value: 0.2
      - name: Gen_001d01h10
        value: 0.2
      - name: Gen_001d01h11
        value: 0.2
    constant: 0
constraints:
  - type: Standard
    name: dummy_constraint
    coefficients:
      - name: Gen_001d01h01
        value: 1
      - name: Gen_001d01h02
        value: 1
      - name: "SO_GB.XYZ's.Dan.(1)"
        value: 59.983048643
      - name: STU_7_AL.rsuT.Wat.Job.(1)
        value: -0.2
    operator: LTE
    rhs: 1000
variables:
  - name: Gen_001d01h01
    var_type:
      DoubleBound:
        - 0
        - 1
  - name: Gen_001d01h02
    var_type:
      DoubleBound:
        - 0
        - inf
  - name: Gen_001d01h03
    var_type: Free
  - name: Gen_001d01h04
    var_type: Free
  - name: Gen_001d01h05
    var_type: Free
  - name: Gen_001d01h06
    var_type: Free
  - name: Gen_001d01h07
    var_type: Free
  - name: Gen_001d01h08
    var_type: Free
  - name: Gen_001d01h09
    var_type: Free
  - name: Gen_001d01h10
    var_type: Free
  - name: Gen_001d01h11
    var_type: Free
  - name: "SO_GB.XYZ's.Dan.(1)"
    var_type: Free
  - name: STU_7_AL.rsuT.Wat.Job.(1)
    var_type: Free
